force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/BLOriginal2__c.field-meta.xml
<CustomField>
    <fullName>BLOriginal2__c</fullName>
    <label>BLOriginal2</label>
    <type>Url</type>
</CustomField>