force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__AS_AGENT_FOR_CARRIER_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AS_AGENT_FOR_CARRIER_1__c</fullName>
    <label>AS AGENT FOR CARRIER 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>