force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__BL_Issued_Location__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BL_Issued_Location__c</fullName>
    <label>B/L Issued Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>