force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__ClientCommunication__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClientCommunication__c</fullName>
    <inlineHelpText>Must not input http://.</inlineHelpText>
    <label>Client Communication</label>
    <type>Url</type>
</CustomField>