force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Company_Address_ZIP__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Company_Address_ZIP__c</fullName>
    <label>Company Address (ZIP/City)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>