force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Company_Signature__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Company_Signature__c</fullName>
    <label>Company Signature</label>
    <type>TextArea</type>
</CustomField>