force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__DebitStartNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitStartNumber__c</fullName>
    <label>Debit Start Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>