force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__EnableInvoiceTemplateSet13__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EnableInvoiceTemplateSet13__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Invoice Template Set 13</label>
    <type>Checkbox</type>
</CustomField>