force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__ExchangeRateViewName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateViewName__c</fullName>
    <label>CloFMS/TMS Exchange Rate View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>