force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__FCYBankAccountShortName3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FCYBankAccountShortName3__c</fullName>
    <label>FCY Bank Account Short Name-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>