force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__FileConverterURL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FileConverterURL__c</fullName>
    <description>Store URL to online File Converter tool.</description>
    <inlineHelpText>Store URL to online File Converter tool.</inlineHelpText>
    <label>File Converter URL</label>
    <type>Url</type>
</CustomField>