force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Footer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Footer__c</fullName>
    <label>Footer</label>
    <type>TextArea</type>
</CustomField>