force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Foreign_Account_No_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Foreign_Account_No_1__c</fullName>
    <label>Foreign Account No 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>