force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Foreign_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Foreign_Bank_Account__c</fullName>
    <label>Foreign Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>