force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Foreign_Bank_Address_2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Foreign_Bank_Address_2__c</fullName>
    <label>Foreign Bank Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>