force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Foreign_Bank_Name_4__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Foreign_Bank_Name_4__c</fullName>
    <label>Foreign Bank Name 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>