force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__GPSSystem2URL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GPSSystem2URL__c</fullName>
    <inlineHelpText>Must not input http://.</inlineHelpText>
    <label>GPS System 2</label>
    <type>Url</type>
</CustomField>