force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__HAWBTemplateURL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HAWBTemplateURL__c</fullName>
    <label>HAWB Template URL</label>
    <type>Url</type>
</CustomField>