force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__HBLTemplateURLOriginal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBLTemplateURLOriginal__c</fullName>
    <label>H B/L Template URL (Orignal)</label>
    <type>Url</type>
</CustomField>