force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__InvoiceTemplateSet10Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceTemplateSet10Name__c</fullName>
    <label>Invoice Template Set 10 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>