force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Account_Address_4__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Account_Address_4__c</fullName>
    <label>Local Account Address 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>