force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Account_No_2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Account_No_2__c</fullName>
    <label>Local Account No 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>