force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Bank_1_Other__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Bank_1_Other__c</fullName>
    <label>Local Bank 1-Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>