force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Bank_Account_3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Bank_Account_3__c</fullName>
    <label>Local Bank Account 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>