force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Bank_Address_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Bank_Address_1__c</fullName>
    <label>Local Bank Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>