force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Bank_Address_2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Bank_Address_2__c</fullName>
    <label>Local Bank Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>