force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Local_Currency__c</fullName>
    <label>Local Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>