force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__LocalCompanyAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocalCompanyAddressLine2__c</fullName>
    <label>Local Company Address (Line 2)</label>
    <type>TextArea</type>
</CustomField>