force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__LocalCurrencyBankAccountShortName2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocalCurrencyBankAccountShortName2__c</fullName>
    <label>Local Currency Bank Account Short Name-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>