force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__LogisticAssociationNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LogisticAssociationNumber__c</fullName>
    <label>Logistic Association Number for B/L</label>
    <length>255</length>
    <type>Text</type>
</CustomField>