force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__LunchBreakHours__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LunchBreakHours__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many hours for lunch break</description>
    <label>Lunch Break Hours</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>