force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__My_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__My_Domain_Name__c</fullName>
    <defaultValue>&quot;XXX-CloFor.my.salesforce.com&quot;</defaultValue>
    <inlineHelpText>Enter the Log-In URL.
-no need https://
-My Domain Name can be confirmed at Quick Search at Setup Menu by searching My Domain</inlineHelpText>
    <label>My Domain Name</label>
    <type>Url</type>
</CustomField>