force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__NvoccCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NvoccCode__c</fullName>
    <label>NVOCC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>