force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Registration_No_Form__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Registration_No_Form__c</fullName>
    <label>Registration No(Form)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>