force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Registration_No_Serial__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Registration_No_Serial__c</fullName>
    <label>Registration No(Serial)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>