force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__RouteObjectIdPrefix__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RouteObjectIdPrefix__c</fullName>
    <label>Route Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>