force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__ShortCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShortCompanyName__c</fullName>
    <inlineHelpText>Prefix for Job Request ID type 2</inlineHelpText>
    <label>Short Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>