force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__StandardWorkHours__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StandardWorkHours__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Number of working hour per standard day</description>
    <label>Standard Work Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>