force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__SwitchToInternalBarCodePhoto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SwitchToInternalBarCodePhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When 3rd party barcode site has problem, clofor_com_cfs__QR_Image__c will not work.
when it happen, switch to clofor_com_cfs__BarCodeImage__c for barcode image.
To use this, barcode should be upload as image.</inlineHelpText>
    <label>Switch to Internal Bar Code Photo</label>
    <type>Checkbox</type>
</CustomField>