force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__SwitchToUnitInBilling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SwitchToUnitInBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switch to Unit in Billing</label>
    <type>Checkbox</type>
</CustomField>