force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>