force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__TurnOnAccountingClosingLock__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TurnOnAccountingClosingLock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Accounting Closing Lock function will be activated.</inlineHelpText>
    <label>Turn On Accounting Closing Lock</label>
    <type>Checkbox</type>
</CustomField>