force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__VAT_Background_Image__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_Background_Image__c</fullName>
    <description>The background image for VAT Invoice</description>
    <inlineHelpText>The background image for VAT Invoice</inlineHelpText>
    <label>VAT Background Image</label>
    <type>Url</type>
</CustomField>