force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/clofor_com_cfs__Website__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>