force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/DraftBL__c.field-meta.xml
<CustomField>
    <fullName>DraftBL__c</fullName>
    <label>DraftBL</label>
    <type>Url</type>
</CustomField>