force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <type>Url</type>
</CustomField>