force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/surrendered_img__c.field-meta.xml
<CustomField>
    <fullName>surrendered_img__c</fullName>
    <label>surrendered img</label>
    <type>Url</type>
</CustomField>