force-app/main/default/objects/clofor_com_cfs__Site_Custom_Settings__c/fields/WaybillOriginal2__c.field-meta.xml
<CustomField>
    <fullName>WaybillOriginal2__c</fullName>
    <label>WaybillOriginal2</label>
    <type>Url</type>
</CustomField>